# gwosc

./: .appveyor.yml  .codeclimate.yml  .codecov.yml  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.md  RELEASE.rst  appveyor.yml  azure-pipelines.yml  gwosc.spec  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: build.yml  docs.yml  lint.yml  packaging.yml
.gitlab/ci/: analysis.yml  debian.yml  dist.yml  docs.yml  python.yml  rhel.yml  test.yml
debian/: changelog  control  copyright  rules
docs/: Makefile  api.rst  conf.py  datasets.rst  index.rst  locate.rst  timeline.rst
docs/_static/: gwosc.css
gwopensci/: _version.py  api.py  datasets.py  locate.py  test_gwopensci.py  timeline.py  urls.py  utils.py
gwosc/: __init__.py  _version.py  api.py  catalog.py  datasets.py  locate.py  test_gwopensci.py  timeline.py  urls.py  utils.py
gwosc/tests/: __init__.py  conftest.py  test_api.py  test_catalog.py  test_datasets.py  test_locate.py  test_timeline.py  test_urls.py  test_utils.py
losc/: __init__.py  _version.py  api.py  locate.py  test_losc.py  timeline.py  urls.py  utils.py
