[aliases]
test = pytest

[metadata]
license_file = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = gwosc/_version.py
versionfile_build = gwosc/_version.py
tag_prefix = v
parentdir_prefix = gwosc

[tool:pytest]
addopts = -r s
markers =
	remote

[coverage:run]
source = gwosc
omit =
	gwosc/_version.py

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	docs/,
	gwosc/_version.py,
	venv/,
	versioneer.py
per-file-ignores =
	__init__.py:F401
