[metadata]
name = gwosc
author = Duncan Macleod
author_email = duncan.macleod@ligo.org
description = A python interface to the GW Open Science data archive
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
# urls
url = https://github.com/gwpy/gwosc/
download_url = https://pypi.org/project/gwosc/
project_urls =
	Bug Tracker = https://github.com/gwpy/gwosc/issues
	Discussion Forum = https://gwpy.slack.com
	Documentation = https://gwosc.readthedocs.io
	Source Code = https://github.com/gwpy/gwosc.git
# classifiers
classifiers =
	Development Status :: 4 - Beta
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Intended Audience :: Science/Research
	Natural Language :: English
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics
	License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.5
setup_requires =
	setuptools >= 38.2.5
	setuptools-scm
	wheel
install_requires =
	requests >= 1.0.0

[options.extras_require]
test =
	pytest >= 2.7.0
	pytest-cov
	pytest-socket
	requests-mock >= 1.5.0
docs =
	sphinx
	sphinx-automodapi
	sphinx_rtd_theme

# -- tools ------------------

[coverage:run]
source = gwosc
omit =
	gwosc/_version.py,
	setup.py,

[flake8]
select =
	E,
	F,
	W,
ignore =
	W503,
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	docs/,
	gwosc/_version.py,
	venv/,
per-file-ignores =
	__init__.py:F401
